# ChainGuard

./: .gitignore  AI_FEATURES_GUIDE.md  AI_INTEGRATION.md  AI_TEST_SUMMARY.md  ARCHITECTURE.md  CHAINGUARD_TEST_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  COMPLETE_WORKFLOW_EXAMPLE.md  CONTRIBUTING.md  CRITICAL_ISSUES.md  Cargo.toml  Dockerfile  LICENSE  QUICK_START.md  README.md  REPORT_GENERATION_DEMO.md  SECURITY_AUDIT.md  SOLANA_IMPLEMENTATION_SUMMARY.md  SOLANA_TEST_REPORT.md  chainguard.example.toml  report.md  rust-toolchain.toml  shieldcontract.example.toml  test_chaincode.go  test_stablecoin.sol
.github/: REPOSITORY_SETTINGS.md  dependabot.yml
.github/workflows/: ai-review.yml.example  ci.yml  publish.yml  release.yml  rust.yml  security-audit.yml
examples/: solana_analysis_report.md  test_stablecoin.sol.example  vulnerable_chaincode.go  vulnerable_solana_program.rs
fabricguard/: Cargo.toml
scripts/: ai_integration_example.py
src/: algorand.rs  aptos.rs  avalanche.rs  cardano.rs  lib.rs  main.rs  near.rs  polkadot.rs  sui.rs
src/analyzer/: complexity.rs  dependencies.rs  mod.rs  performance.rs  security.rs
src/auditor/: mod.rs
src/auth/: mod.rs
src/benchmark/: mod.rs
src/cosmos/: cosmwasm.rs  distribution.rs  governance.rs  ibc.rs  mod.rs  staking.rs
src/fabric/: determinism.rs  endorsement.rs  mod.rs  performance.rs  private_data.rs  state_db.rs
src/interactive/: mod.rs
src/llm/: mod.rs
src/optimizer/: mod.rs
src/reporter/: mod.rs
src/reporter/templates/: report.html  report.md
src/rules/: mod.rs
src/solana/: account_validation.rs  arithmetic_checks.rs  cpi_security.rs  mod.rs  ownership_validation.rs  performance.rs  signer_checks.rs
src/token_standards/: erc1155.rs  erc20.rs  erc721.rs  erc777.rs  mod.rs  stablecoin.rs
src/utils/: mod.rs
src/validator/: ai_patterns.rs  dependency_validator.rs  mod.rs  slopsquatting.rs
tests/: cli_integration_test.rs  fabric_integration_test.rs  solana_integration_test.rs
